--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend --legacy-peer-deps true && npm run build --prefix frontend --legacy-peer-deps true"
+  },
+  "engines": {
+    "node": "16.14.2",
+    "npm": "8.11.0"
   },
   "author": "",
   "license": "ISC",
